--- a/static/index.html
+++ b/static/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link href="/static/styles.css" rel="stylesheet">
+    <link href="./libs/bootstrap.min.css" rel="stylesheet">
     <script src="/static/require.js"></script>
     <script src="/static/client.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="./libs/jquery-2.1.4.min.js"></script>
+    <script src="./libs/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="content-fluid">
