--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,8 @@
 <head>
     <link href="/static/styles.css" rel="stylesheet">
     <link href="./libs/bootstrap.min.css" rel="stylesheet">
-    <script src="/static/require.js"></script>
-    <script src="/static/client.js"></script>
+    <script src="/static/libs/require.js"></script>
+    <script src="/static/main.js"></script>
     <script src="./libs/jquery-2.1.4.min.js"></script>
     <script src="./libs/bootstrap.min.js"></script>
 </head>
